# cs5483-project-public

./: .gitignore  README.md
apps/cloudflared/: README.md  docker-compose.yml
apps/consumer/: .prettierignore  README.md  docker-compose.yml  package.json  tsconfig.json
apps/consumer-code/: docker-compose.yml  package.json
apps/consumer-llm/: .prettierrc  README.md  package.json  run-4-ollama-servers-in-v100.sh  run-4-ollama-servers.sh  run-6-ollama-servers.sh  tsconfig.json
apps/master-0/: .gitignore  (+4 more)
result/: feature-importance-rank-mean-std-with-llm.xlsx  feature-importance-rank-mean-std-without-llm.xlsx
util/: pyproject.toml
util/util/: config.py  read_data.py
util/util/backup/: global_variable.py
util/util/backup/classifier/: base_classifier_list.py
util/util/backup/evaluate/: evaluate_all_base_classifier.py
util/util/backup/hyperparameter_tuning/: common_func.py  hyperparameters_tuning_by_bayesian.py
util/util/backup/hyperparameter_tuning/config/: AdaBoostClassifier.py  CatBoostClassifier.py  ExtraTreesClassifier.py  GradientBoostingClassifier.py  HistGradientBoostingClassifier.py  LGBMClassifier.py  RandomForestClassifier.py  XGBClassifier.py  XGBRFClassifier.py
util/util/data_processing/: preprocesing.py
util/util/evaluation/: cross_val_10_fold.py  feature_importance.py  show_train_test_accuracy.py
util/util/tune/model/: create_AdaBoostClassifier_from_params.py
util/util/tune/objective/: create_AdaBoostClassifier.py  create_CatBoostClassifier.py  create_LGBMClassifier.py  create_RandomForestClassifier.py  create_XGBClassifier.py
(+186 files in other folders)
