[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["util"]

[project]
name = "util"
description = "Utility functions"
version = "0.0.0"
authors = []
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]